--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,10 @@ jobs:
       uses: actions/setup-python@v5.4.0
       with:
         python-version: 3.12
+    - name: Tests of installations 
+      run: |
+        node --version
+        python --version   
 
               
 
