incluindo testes robot no arquivo yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,5 +38,6 @@ jobs:
     - name: Init Library Browser
       run: rfbrowser init        
 
-              
+    - name: Tests E2E Robot
+      run: robot -d ./logs -i smoke tests              
 
