adicionando step de reporter dos testes robot

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,5 +39,11 @@ jobs:
       run: rfbrowser init        
 
     - name: Tests E2E Robot
-      run: robot -d ./logs -i smoke tests              
+      run: robot -d ./logs -i smoke tests   
+      
+    - name: Robot Reporter
+      uses: joonvena/robotframework-reporter-action@v2.5
+      with:
+        gh_access_token: ${{ secrets.GITHUB_TOKEN }}     
+        report_path: logs            
 
