--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,3 +47,8 @@ jobs:
         gh_access_token: ${{ secrets.GITHUB_TOKEN }}     
         report_path: logs            
 
+    - name: Upload Report Robot
+      uses: actions/upload-artifact@v4
+      with:
+        name: Tests Robot
+        path: logs
